fix: validate analytics and trading review findings